# yozm-vibe-antigravity

./: README.md  pyproject.toml
.agent/skills/apply-pr-review/: SKILL.md
.agent/skills/create-issue/: SKILL.md
.agent/skills/create-issue/resources/: issue_templates.md
.agent/skills/create-pr/: SKILL.md
.agent/skills/create-pr/resources/: pr_template.md
.agent/skills/git-commit/: SKILL.md
.agent/skills/review-pr/: SKILL.md
.agent/skills/review-pr/resources/: review_checklist.md
.agent/workflows/: commit.md
chapter3/todo-cli/: main.py  test_todo.py  todo_manager.py
chapter4/pomodoro-app/: index.html  script.js  style.css
projects/ch04-horse-racing/: README.md  pyproject.toml
projects/ch04-horse-racing/horse_racing/: __init__.py
projects/ch07-nanobanana/: README.md  pyproject.toml
projects/ch07-nanobanana/nanobanana/: __init__.py
projects/ch08-ai-board/: README.md  pyproject.toml
projects/ch08-ai-board/ai_board/: __init__.py
projects/ch09-shorts-factory/: README.md  pyproject.toml
projects/ch09-shorts-factory/shorts_factory/: __init__.py
